// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Coin 1`] = `
{
  "fields": {
    "amount": {
      "id": 2,
      "options": {
        "(cosmos_proto.scalar)": "cosmos.Int",
        "(gogoproto.customtype)": "Int",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "amount",
        "(telescope:name)": "amount",
        "(telescope:orig)": "amount",
      },
      "type": "string",
    },
    "denom": {
      "id": 1,
      "options": {
        "(telescope:camel)": "denom",
        "(telescope:name)": "denom",
        "(telescope:orig)": "denom",
      },
      "type": "string",
    },
  },
  "options": {
    "(gogoproto.equal)": true,
  },
}
`;

exports[`DecCoin 1`] = `
{
  "fields": {
    "amount": {
      "id": 2,
      "options": {
        "(cosmos_proto.scalar)": "cosmos.Dec",
        "(gogoproto.customtype)": "Dec",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "amount",
        "(telescope:name)": "amount",
        "(telescope:orig)": "amount",
      },
      "type": "string",
    },
    "denom": {
      "id": 1,
      "options": {
        "(telescope:camel)": "denom",
        "(telescope:name)": "denom",
        "(telescope:orig)": "denom",
      },
      "type": "string",
    },
  },
  "options": {
    "(gogoproto.equal)": true,
  },
}
`;

exports[`DecProto 1`] = `
{
  "fields": {
    "dec": {
      "id": 1,
      "options": {
        "(cosmos_proto.scalar)": "cosmos.Dec",
        "(gogoproto.customtype)": "Dec",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "dec",
        "(telescope:name)": "dec",
        "(telescope:orig)": "dec",
      },
      "type": "string",
    },
  },
}
`;

exports[`IntProto 1`] = `
{
  "fields": {
    "int": {
      "id": 1,
      "options": {
        "(cosmos_proto.scalar)": "cosmos.Int",
        "(gogoproto.customtype)": "Int",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "int",
        "(telescope:name)": "int",
        "(telescope:orig)": "int",
      },
      "type": "string",
    },
  },
}
`;

exports[`MsgExitPool 1`] = `
{
  "fields": {
    "poolId": {
      "id": 2,
      "options": {
        "(gogoproto.moretags)": "yaml:pool_id",
        "(telescope:camel)": "poolId",
        "(telescope:name)": "poolId",
        "(telescope:orig)": "poolId",
      },
      "type": "uint64",
    },
    "sender": {
      "id": 1,
      "options": {
        "(gogoproto.moretags)": "yaml:sender",
        "(telescope:camel)": "sender",
        "(telescope:name)": "sender",
        "(telescope:orig)": "sender",
      },
      "type": "string",
    },
    "shareInAmount": {
      "id": 3,
      "options": {
        "(gogoproto.customtype)": "github.com/cosmos/cosmos-sdk/types.Int",
        "(gogoproto.moretags)": "yaml:share_in_amount",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "shareInAmount",
        "(telescope:name)": "shareInAmount",
        "(telescope:orig)": "shareInAmount",
      },
      "type": "string",
    },
    "tokenOutMins": {
      "id": 4,
      "options": {
        "(gogoproto.moretags)": "yaml:token_out_min_amounts",
        "(gogoproto.nullable)": false,
        "(telescope:camel)": "tokenOutMins",
        "(telescope:name)": "tokenOutMins",
        "(telescope:orig)": "tokenOutMins",
      },
      "rule": "repeated",
      "type": "cosmos.base.v1beta1.Coin",
    },
  },
}
`;
